--- a/src/pages/public/Layout/layout.css
+++ b/src/pages/public/Layout/layout.css
@@ -4,4 +4,5 @@
     grid-template-columns: 60px 1fr;
     /* gap: 1em; */
     background-color: var();
+    overflow: hidden;
 }
